# Anagiwahst

./: .gitignore  Anagiwahst.pro  CMakeLists.txt  Doxyfile  README.md  anagiwahst.desktop  qml.qrc  updatel10n.sh
.tx/: config
images/: CMakeLists.txt
l10n/: CMakeLists.txt  anagiwahst.ts  anagiwahst_de.ts
qml/: CMakeLists.txt  CheckBoxWithReset.qml  Configuration.qml  FileTab.qml  Header.qml  LabeledTextField.qml  ProjectEdit.qml  ProjectView.qml  PropertyDialog.qml  ResultDialog.qml  ResultView.qml  TableText.qml  UnitEdit.qml  main.qml
src/: CMakeLists.txt  configuration.cpp  configuration.h  dbmanager.cpp  dbmanager.h  main.cpp  project.cpp  project.h  projectfiltermodel.cpp  projectfiltermodel.h  projectmodel.cpp  projectmodel.h  property.cpp  property.h  property_p.h  propertycreator.cpp  propertycreator.h  propertyfiltermodel.cpp  propertyfiltermodel.h  propertymodel.cpp  propertymodel.h  propertywriter.cpp  propertywriter.h  unit.cpp  unit.h  unitfiltermodel.cpp  unitfiltermodel.h  unitmodel.cpp  unitmodel.h
templates/default_qobject/: code.tpl  header.tpl  notifycomment.tpl  propertycomment.tpl  readcomment.tpl  resetcomment.tpl  writecomment.tpl
